tests/test_struct/bad/nested2.catala
## [Article]

```catala
new struct S:
  data x content E
  data y content int

new enum E:
  -- Case1 content bool
  -- Case2 content S
```
